syntax = "proto3";

package holms.types.booking.pricing;
option csharp_namespace = "HOLMS.Types.Booking.Pricing";
option go_package = "booking/pricing";

import "primitive/pb_inclusive_opsdate_range.proto";
import "supply/room_types/room_type_indicator.proto";

message GenesisPriceEstimateRequestDTO {
    holms.types.primitive.PbInclusiveOpsdateRange date_range = 1;
    holms.types.supply.room_types.RoomTypeIndicator room_type = 2;
    // NOTE(DA) qual tombstone = 3
    int32 number_adult_guests = 4;
    repeated string reservation_tags = 5;
}
